--- a/VRChat/64/1137964.html
+++ b/VRChat/64/1137964.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3oyq9LRyBD+cIuPiYb0gXPEfKTdD8rPoiBWyEYZz8wA="></script>
+    "RnJVCbr1gaO7S9vOmuE51hrwbQC0V+VuaoA9WC3YOoY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AF式注射器 V1.5","description":"キャップ付きの注射器モデル\n\nVRChatでの使用を想定しています。\n\n針先は鋭くなっていますので、人に向けたりする時は注意してください。\n\nArxCharacterShadersを使用しています。（https://booth.pm/ja/items/2493539）\n\n◆旧モデルからの変更点\n\n・ポリゴン削減\n　・1432　→　808\n　・円柱を20角から10角に変更\n\n・マテリアル削減\n　・6　→　4（5）\n\n・シェーダー変更\n\n・サイズを5分の1に変更（手のひらサイズ\n\n・UVを整理\n\n・テクスチャを少し変更","url":"https://booth.pm/ja/items/1137964","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1137964/d3b49b64-ad13-4e86-bc5a-abaa00da8cd6_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3oyq9LRyBD+cIuPiYb0gXPEfKTdD8rPoiBWyEYZz8wA="></script>
+    nonce="RnJVCbr1gaO7S9vOmuE51hrwbQC0V+VuaoA9WC3YOoY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137964/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137964/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
