--- a/VRChat/56/1137956.html
+++ b/VRChat/56/1137956.html
@@ -98,9 +98,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "L7Q6THTrBov+rmLhOq7hRSGK/tx39aH4aJGE5a6AYbI="></script>
+    "bxZvUZewVl+hEn+7s69LmanpPcvjCzKH4fqnIJfYt6o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"打刀「銀鴉」","description":"この３ＤモデルはVR用の武器モデルです。\n\nモデルはハイポリとローポリが用意してあって\nそれぞれ下記のようになっています。\n\n・ハイポリ　△ポリ3651（鞘を払って2749）\n\n・ローポリ　△ポリ2183（鞘を払って1281）\n\n\n鋒諸刃造りの日本刀をベースに透かし鍔などで落ち着いた配色で仕上げています！","url":"https://booth.pm/ja/items/1137956","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1137956/7580692c-4b1d-4bf1-a4f1-fce58166b49f_base_resized.jpg"}
     </script>
@@ -111,7 +111,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="L7Q6THTrBov+rmLhOq7hRSGK/tx39aH4aJGE5a6AYbI="></script>
+    nonce="bxZvUZewVl+hEn+7s69LmanpPcvjCzKH4fqnIJfYt6o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -135,6 +135,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -178,10 +180,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1137956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              101
+                              102
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -193,14 +195,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1137956/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              101
+                              102
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
