--- a/VRChat/06/1134406.html
+++ b/VRChat/06/1134406.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Q0IpEAZoKKh2V90OEu3xmNlUkFVpRVcqCmovXYC6Ryw="></script>
+    "t1wR/KQJJiaPuHkN7L/pl0kzQNcVBy7Fm8qfyO2Oa6I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】スピーカー＆マイクセット","description":"ご購入されてVRChat等で使用された方は、twitterで@tuneken_workにスクショを送っていただけると作者が喜びます！\n\n【商品説明】\nアニメーション付きのスピーカー、マイクのセットです。\nアニメーションの速度はコントローラーにて調整可能なので、お好みの速さで再生してください。\n\nスピーカーは左右２モデルを用意してあります。\nスタンド部は取り外し可能で、スピーカーを浮遊させるような使い方もできます。\nまた、スケールを調整することによってマイクスタンドとして使うことも可能です。\n\n\nピンク色部分はエミッションマップで発光させています。\n発光の強さはマテリアルから調整可能です。\n\n\nスピーカー\n2650ポリゴン\nテクスチャ1024px\n\nスタンド\n408ポリゴン\nテクスチャ512px\n\nマイク\n928ポリゴン\nテクスチャ256px\n\n\n【含まれる物】\nUnitypackage\n-モデル本体のFBX\n-モデル本体のPrefab\n-カラーマップ\n-エミッションマップ\n-スペキュラマップ\n-アニメーションデータ\n\n\n【使用に関する注意】\n・モデル、テクスチャ、エフェクトの改造・加筆修正は自由です。\n・無償、有償に関わらずデータの再配布はおやめください。\n・VRChatで使用することを想定していますが、Vtuber等の動画コンテンツ、同人ゲーム等での使用も可能です。","url":"https://booth.pm/ja/items/1134406","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/c43583ad-31e1-4ed9-9a1e-3c3f8648877c/i/1134406/0500128b-1b2a-4282-ad25-5d1679a40c39_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Q0IpEAZoKKh2V90OEu3xmNlUkFVpRVcqCmovXYC6Ryw="></script>
+    nonce="t1wR/KQJJiaPuHkN7L/pl0kzQNcVBy7Fm8qfyO2Oa6I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1134406/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              283
+                              284
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1134406/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              283
+                              284
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
