--- a/VRChat/28/1133828.html
+++ b/VRChat/28/1133828.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FE9w3jY8PakAnxZ3JdfdWL78IjHJ6D34qOs+B360KEo="></script>
+    "Lpo8OvtH8ojjdyKMnP73JU/SEcLEBDRGt0iG52FL87U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ウニョン螺旋","description":"ウニョン螺旋です\n\nいい感じに気持ちの良い動きをする螺旋状の何かであり、部屋のインテリアにしたり手に持ったりすると良いです\n\n動きは↓参照\nhttps://twitter.com/kuzusaki/status/1072161171183099909\n\n","url":"https://booth.pm/ja/items/1133828","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c241843d-afb1-4746-a472-f51bc3de2d83/i/1133828/b45ea9ea-37ce-4ac1-9528-b2b6722df29f_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FE9w3jY8PakAnxZ3JdfdWL78IjHJ6D34qOs+B360KEo="></script>
+    nonce="Lpo8OvtH8ojjdyKMnP73JU/SEcLEBDRGt0iG52FL87U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1133828/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1133828/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               21
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
