--- a/VRChat/39/1133639.html
+++ b/VRChat/39/1133639.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QtMObG5nvdcECoUmIP0XUbC0Lh4Y3OEq6E2eI1u2PTk="></script>
+    "wFZp/76DbG2tXVT/78ne3ARJ+ziwN6WfjiIJiqNah1g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リボン(610ポリ)","description":"リボンです。\nUnityにリボン.fbxを置くだけで使えます。\n\nリボン.fbx内にある「柄」のテクスチャを変えると画像のようにリボンに好きな柄を追加できます。\n\nサイズが大きいので縮小してご使用ください。\nクリスマスの飾り付けなどにどうぞ。\n\n商用・非商用 使用可\n改変可\n再配布可\n","url":"https://booth.pm/ja/items/1133639","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f9645990-9f02-4323-a296-fb5f41046b0b/i/1133639/dc2fd428-80ef-426f-9dea-624abead621a_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QtMObG5nvdcECoUmIP0XUbC0Lh4Y3OEq6E2eI1u2PTk="></script>
+    nonce="wFZp/76DbG2tXVT/78ne3ARJ+ziwN6WfjiIJiqNah1g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1133639/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1133639/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               71
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
