--- a/VRChat/73/1131673.html
+++ b/VRChat/73/1131673.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "e9ZM+5D0b+ky6/roq6X9EkvyTdE3NcWG4GCZuHO9B2A="></script>
+    "S29z/LBjwi3K8vaXUebvWENnOgQKXVjai2x8vVpD9Zk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"標準装備電子拳銃　燈火","description":"English explanation is at the bottom of this page.\n\n本作品はVRCやUnityでの利用を想定しております。\nエネルギーラインの色はUnity上で変更可能です。","url":"https://booth.pm/ja/items/1131673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/eb7cde3f-8485-4ff2-b79c-34ed3e90b219/i/1131673/b8bc85c9-3b2f-4c55-a3fb-de429333093c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e9ZM+5D0b+ky6/roq6X9EkvyTdE3NcWG4GCZuHO9B2A="></script>
+    nonce="S29z/LBjwi3K8vaXUebvWENnOgQKXVjai2x8vVpD9Zk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1131673/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               34
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1131673/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               34
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
