--- a/VRChat/56/1131656.html
+++ b/VRChat/56/1131656.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2WJNSmyyuYeAsi8wTLWT9win1vw1pYGi6BotNQTBcds="></script>
+    "9wKPh1k+sqDfc98FCZ3DRPsg5GuTDWIVjjuwupgDNqo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[Free]Boardgame01","description":"ボードゲーム？です。16個のコマとボード、コマの位置を初期化するリセットボタンがついています。VRChat用のセットアップのため、使用するのにはVRChat SDKが必要です。\n\n頂点カラーを利用して色を付けるCKEP/VertexColorシェーダが付属しています。これを利用しているので、全部合わせて17メッシュ0テクスチャ1マテリアルです。\n\n再配布はご遠慮ください。個人的にお楽しみください。","url":"https://booth.pm/ja/items/1131656","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/00473482-a5a6-406c-b599-7607b9c789aa/i/1131656/569d8f28-d5d3-4e41-97da-d58614ac53d4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2WJNSmyyuYeAsi8wTLWT9win1vw1pYGi6BotNQTBcds="></script>
+    nonce="9wKPh1k+sqDfc98FCZ3DRPsg5GuTDWIVjjuwupgDNqo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1131656/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1131656/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               18
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
