--- a/VRChat/83/1131583.html
+++ b/VRChat/83/1131583.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0MRe9kr4fSzyIE5GEd0QS87ggqTRXoyoYy3BHtq/bko="></script>
+    "pkD/SGwPC7Mu6CH3/hLa21Nxb6CP4/oep3MEp6SXeyk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MCF M28 Type 32 パワーリボルバー","description":"【製品内容】\n・UnityPackage\n・利用規約\n\n【説明】\n対サイボーグ用パワーリボルバー。\n重く、ごついがパワーに関しては他の追随を許さない。命中精度も高く、PPCカスタム風の見た目も相まってこれを愛用する者は多い。\n\n\nSSは #MCF_VRC をつけてツイートしてくれると私が喜びます。\n\nアバターに装着するさいはローポリモデル（ホルスター付き）を使用するとポリ数の削減になります。銃本体は手に付けて、抜くときにホルスター側を消してくださいな。\n\nカラーバリエーション三種同梱\n\nポリ数合計:2830\nMCF M28 Type 32 パワーリボルバー:912\nシリンダー(穴あき:268\n弾:1416\nシリンダーローポリ:44\nトリガー:120\nハンマー:70\n\nアバター装着用モデル:568\n\n\n【免責事項】\n当モデルを使用した際、使用者側にいかなる不利益が発生した場合でも当方は一切責任を負いません。\n\n【禁止事項】\n・再配布（ゲームに組み込む・VRCのペデスタル等は許可）\n・政治的、差別的な用途への利用、又は過去にそのような用途に扱われた経歴のあるキャラクターへの利用","url":"https://booth.pm/ja/items/1131583","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/41721053-8f32-4b87-9b48-5fda7552cf1a/i/1131583/a148ce66-7fce-47a8-ba6d-24aad2d1e6fc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0MRe9kr4fSzyIE5GEd0QS87ggqTRXoyoYy3BHtq/bko="></script>
+    nonce="pkD/SGwPC7Mu6CH3/hLa21Nxb6CP4/oep3MEp6SXeyk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1131583/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1131583/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               143
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
